# Ryft

./: .gitignore  .src.py  LICENSE  README.md  conftest.py  pyproject.toml  req.txt  start.txt
.ryft/: cache.json
docs/: ARCHITECTURE.md  COMMAND_REFERENCE.md  CONFIG_REFERENCE.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  PLUGIN_API.md  PROVIDER_API.md  ROADMAP.md  progress.md
kyte/: __init__.py  __main__.py  ai.py  commands.py  config.py  doctor.py  git.py  models.py  onboarding.py  recovery.py  ui.py
kyte.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ryft/: __init__.py  __main__.py  ai.py  commands.py  config.py  doctor.py  formatter.py  fs.py  git.py  logging_setup.py  models.py  onboarding.py  pipeline.py  recovery.py  sync.py  ui.py  utils.py
ryft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ryft/_legacy_ui/: icons.py  prompt.py
ryft/commands/: __init__.py  ai.py  commit.py  config.py  doctor.py  format.py  help.py  insight.py  registry.py  sync.py  system.py
ryft/core/: __init__.py  context.py  events.py  lifecycle.py  models.py
ryft/core/config/: __init__.py  loader.py  schema.py
ryft/formatter/: __init__.py  external.py  pipeline.py  report.py
ryft/knowledge/: __init__.py  indexer.py  search.py  store.py  symbols.py
ryft/lang/: __init__.py  base.py  json_lang.py  legacy.py  lua_lang.py  normalize.py  python_lang.py  stubs.py
ryft/plugins/: __init__.py  api.py  manager.py  spec.py
ryft/providers/: __init__.py  _async.py  _http.py  anthropic.py  base.py  factory.py  google.py  ollama.py  openai_compatible.py  registry.py
ryft/services/: __init__.py  ai_cache.py  base.py  git_monitor.py  indexer.py  manager.py
ryft/ui/: __init__.py  activity.py  colors.py  components.py  dashboard.py  pager.py  render.py
ryft/ui/theme/: __init__.py  palette.py  tokens.py
ryft/ui/tui/: __init__.py  app.py  dashboard.py  palette.py  render.py
src/: __main__.py  ai.py  commands.py  config.py  formatter.py  git.py  models.py  sync.py  ui.py
tests/: __norun__.py  conftest.py  test_ai.py  test_commands.py  test_config.py  test_doctor.py  test_formatter.py  test_git.py  test_knowledge.py  test_onboarding.py  test_providers.py  test_recovery.py  test_render.py
