[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ryft"
dynamic = ["version"]
description = "A calm, fast terminal companion for git — AI commit messages, live sync, and one-command onboarding."
readme = "README.md"
requires-python = ">=3.10"

license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Aman [tfmvn - github]" }
]

keywords = [
    "cli",
    "git",
    "ai",
    "developer-tools",
    "ollama"
]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/tfmvn/Ryft"
Issues = "https://github.com/tfmvn/Ryft/issues"

[project.scripts]
ryft = "ryft.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "ryft.__version__" }

[tool.setuptools.packages.find]
include = ["ryft*"]